# sacvision

./: .project  CHANGELOG.txt  INSTALL.txt  README.md  pyproyect.toml  requirements.txt  setup.cfg
SaconsultingVision/: sacvision.py
SaconsultingVision/.spyproject/: workspace.ini
init/: sacvision-init.sh
oldversion/0.0.1/: INSTALL.txt
oldversion/0.0.1/recipe/: build.sh  meta.yaml
oldversion/0.0.1/snap/: snapcraft.yaml
oldversion/0.0.1/snap/gui/: sacvision.desktop
recipe/: meta.yaml
snap/: snapcraft.yaml
src/SaconsultingVision/: sacvision.py
src/sacvision/: backend.py  form.ui  histowidget.py  sacapp.py  sacvision.qrc  sacvision_rc.py  sacvisionapp.py  ui_form.py
src/sacvision.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sacvision/.spyproject/config/: workspace.ini
src/sacvision/data/: sacvision.rcc
