[metadata]
name = sacvision
version = 0.0.1
author = luisdsaco
author_email = saconsultingacs@outlook.com
description = Computer Vision Demo.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/luisdsaco/sacvision
project_urls =
    Bug Tracker = https://github.com/luisdsaco/sacvision/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    sacvision = sacvision.sacvisionapp:main

[options.package_data]
sacvision =
	data/*.png
	data/*.jpg
